# LearnDuckdb

./: Makefile  README.md  pyproject.toml
ingestion/: duckdbclient.py  model.py  pipeline.py
output/: dbt.duckdb
tests/ingestion/: test_model.py
transform/t_duckdb/: .user.yml  dbt_project.yml  profiles.yml
transform/t_duckdb/models/example/: consumer.sql  schema.yml
transform/t_duckdb/seeds/consumer_delta_table/: 0-2be0745b-085e-4e15-8449-70786ba4877c-0.parquet
